add navs to base

--- a/home/_layouts/default.html
+++ b/home/_layouts/default.html
@@ -6,7 +6,11 @@
 </head>
 
 <body class="antialiased text-gray-900 min-h-screen">
+    {% include header.html %}
+
     {{ content }}
+
+    {% include footer.html %}
 </body>
 
 </html>
