--- a/home/styles/index.css
+++ b/home/styles/index.css
@@ -22,6 +22,10 @@
         @apply title-font font-medium text-gray-900 tracking-widest text-sm mb-3
         */
     }
+
+    .cm-text-body {
+        @apply text-gray-600 body-font
+    }
 }
 
 .bg-primary {
