more site attributes

--- a/home/_includes/footer.html
+++ b/home/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-gray-600 body-font">
+<footer class="cm-text-body">
     <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
         <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -7,7 +7,7 @@
           </svg>
           <span class="ml-3 text-xl">{{ site.title }}</span>
         </a>
-        <p class="mt-2 text-sm text-gray-500">{{ site.description }}</p>
+        <p class="mt-2 text-sm text-gray-500">{{ site.tagline }}</p>
       </div>
       <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
