--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -2,7 +2,7 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">{{ include.data.header.title }}</h1>
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 cm-lgt-txt">{{ include.data.header.title }}</h1>
           <div class="h-1 w-20 bg-primarylg rounded"></div>
         </div>
         <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">{{ include.data.header.text }}</p>
@@ -13,7 +13,7 @@
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
             <h3 class="tracking-widest text-purple-500 text-xs font-medium title-font">{{ item.subtitle }}</h3>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">{{ item.title }}</h2>
+            <h2 class="text-lg cm-lgt-txt font-medium title-font mb-4">{{ item.title }}</h2>
             <p class="leading-relaxed text-base">{{ item.tagline }}</p>
           </div>
         </div>
