--- a/home/_layouts/default.html
+++ b/home/_layouts/default.html
@@ -5,7 +5,7 @@
     {% include head.html %}
 </head>
 
-<body class="antialiased text-gray-900 min-h-screen">
+<body class="antialiased cm-lgt-txt min-h-screen">
     {% include header.html %}
 
     {{ content }}
