fix text formatting

--- a/home/_includes/cta.html
+++ b/home/_includes/cta.html
@@ -1,4 +1,4 @@
-<section class="cm-text-body">
+<section class="cm-text-body body-font">
   {% unless include.no_container %}
     <div class="container px-5 py-24 mx-auto">
   {% endunless %}
