--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -1,4 +1,4 @@
-<section class="cm-text-body">
+<section class="cm-text-body body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
