--- a/home/styles/index.css
+++ b/home/styles/index.css
@@ -17,14 +17,11 @@
     }
 
     .footer-categorie {
-        @apply title-font font-medium text-gray-900 tracking-widest text-sm mb-3
-        /*
-        @apply title-font font-medium text-gray-900 tracking-widest text-sm mb-3
-        */
+        @apply font-medium text-gray-900 tracking-widest text-sm mb-3
     }
 
     .cm-text-body {
-        @apply text-gray-600 body-font
+        @apply text-gray-600
     }
 
     .cm-lgt-txt {
