--- a/home/_includes/footer.html
+++ b/home/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="cm-text-body">
+<footer class="cm-text-body body-font">
     <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
         <a class="flex title-font font-medium items-center md:justify-start justify-center cm-lgt-txt">
@@ -11,7 +11,7 @@
       </div>
       <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="footer-categorie">CATEGORIES</h2>
+          <h2 class="footer-categorie title-font">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
               <a class="footer-link">First Link</a>
@@ -28,7 +28,7 @@
           </nav>
         </div>
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="footer-categorie">CATEGORIES</h2>
+          <h2 class="footer-categorie title-font">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
               <a class="footer-link">First Link</a>
@@ -45,7 +45,7 @@
           </nav>
         </div>
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="footer-categorie">CATEGORIES</h2>
+          <h2 class="footer-categorie title-font">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
               <a class="footer-link">First Link</a>
@@ -62,7 +62,7 @@
           </nav>
         </div>
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="footer-categorie">CATEGORIES</h2>
+          <h2 class="footer-categorie title-font">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
               <a class="footer-link">First Link</a>
