--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="cm-text-body">
+<header class="cm-text-body body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center cm-lgt-txt mb-4 md:mb-0">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-primary rounded-full" viewBox="0 0 24 24">
