fix feature set

--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -14,7 +14,7 @@
           <div class="bg-gray-100 p-6 rounded-lg">
             <h3 class="tracking-widest text-purple-500 text-xs font-medium title-font">{{ item.subtitle }}</h3>
             <h2 class="text-lg cm-lgt-txt font-medium title-font mb-4">{{ item.title }}</h2>
-            <p class="leading-relaxed text-base">{{ item.tagline }}</p>
+            <p class="leading-relaxed text-base">{{ item.description }}</p>
           </div>
         </div>
       {% endfor %}
