--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -6,9 +6,10 @@
         </svg>
         <span class="ml-3 text-xl">{{ site.title }}</span>
       </a>
-      <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:cm-lgt-txt">for buisnesses</a>
-        <a class="mr-5 hover:cm-lgt-txt">for hobbyists</a>
+      <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center rounded border-2 border-primary">
+        <a class="ml-2 mr-2 hover:cm-lgt-txt">for <strong>hobbyists</strong></a>
+        <a class="mr-2 hover:cm-lgt-txt">for <strong>buisnesses</strong></a>
+        <a class="mr-2 hover:cm-lgt-txt">for <strong>enterprise</strong></a>
       </nav>
       <button href="{{site.demo-link}}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
         Open demo
