--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -6,6 +6,13 @@
         </svg>
         <span class="ml-3 text-xl">{{ site.title }}</span>
       </a>
+
+      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+        <a class="mr-5 hover:cm-lgt-txt">Home</a>
+        <a class="mr-5 hover:cm-lgt-txt">Plugins</a>
+        <a class="mr-5 hover:cm-lgt-txt">Third Link</a>
+      </nav>
+
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center rounded border-2 border-primary">
         <a class="ml-2 mr-2 hover:cm-lgt-txt">for <strong>hobbyists</strong></a>
         <a class="mr-2 hover:cm-lgt-txt">for <strong>buisnesses</strong></a>
