--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -3,7 +3,7 @@
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
           <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 cm-lgt-txt">{{ include.data.header.title }}</h1>
-          <div class="h-1 w-20 bg-primarylg rounded"></div>
+          <div class="h-1 w-20 bg-secondary rounded"></div>
         </div>
         <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">{{ include.data.header.text }}</p>
       </div>
