--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="cm-text-body body-font">
+<header class="cm-text-body body-font sticky top-0 z-50 bg-gradient-to-r from-gray-100 to-purple-400">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center cm-lgt-txt mb-4 md:mb-0">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-primary rounded-full" viewBox="0 0 24 24">
@@ -18,7 +18,7 @@
         <a class="mr-2 hover:cm-lgt-txt">for <strong>buisnesses</strong></a>
         <a class="mr-2 hover:cm-lgt-txt">for <strong>enterprise</strong></a>
       </nav>
-      <button href="{{site.demo-link}}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+      <button href="{{site.demo-link}}" class="inline-flex items-center bg-gray-100 ml-2 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
         Open demo
       </button>
     </div>
