--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -1,9 +1,7 @@
 <header class="cm-text-body body-font sticky top-0 z-50 bg-gradient-to-r from-gray-100 to-purple-400">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center cm-lgt-txt mb-4 md:mb-0">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-primary rounded-full" viewBox="0 0 24 24">
-          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
+        <img src="/assets/logo.png" class="h-8">
         <span class="ml-3 text-xl">{{ site.title }}</span>
       </a>
 
