--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="cm-text-body body-font sticky top-0 z-50 bg-gradient-to-r from-gray-100 to-purple-400">
+<header class="cm-text-body body-font sticky top-0 z-50 bg-gradient-to-r from-white to-secondary">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center cm-lgt-txt mb-4 md:mb-0">
         <img src="/assets/logo.png" class="h-8">
