use template colors

--- a/home/_includes/hero.html
+++ b/home/_includes/hero.html
@@ -6,7 +6,7 @@
           <br class="hidden lg:inline-block">{{ include.title_2 }}
           {% endif %}
           {% if include.color %}
-          <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-400">{{ include.color }}</span>
+          <span class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary">{{ include.color }}</span>
           {% endif %}
         </h1>
         <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
