set header links

--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -7,8 +7,8 @@
 
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
         <a class="mr-5 hover:cm-lgt-txt" href="/">Home</a>
-        <a class="mr-5 hover:cm-lgt-txt">Plugins</a>
-        <a class="mr-5 hover:cm-lgt-txt">Third Link</a>
+        <a class="mr-5 hover:cm-lgt-txt" href="{{ site.plugin-link }}">Plugins</a>
+        <a class="mr-5 hover:cm-lgt-txt" href="{{ site.doc-link }}">Docs</a>
       </nav>
 
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center rounded border-2 border-primary">
