--- a/home/_layouts/post.html
+++ b/home/_layouts/post.html
@@ -15,6 +15,6 @@ layout: default
     {% endif %}
 </header>
 
-<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto">
+<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto min-h-screen">
     {{ content }}
 </article>
