offset links by header

--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -2,7 +2,8 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 cm-lgt-txt" id="{{ include.data.header.ref }}">{{ include.data.header.title }}</h1>
+          <a class="anchor" id="{{ include.data.header.ref }}"></a>
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 cm-lgt-txt">{{ include.data.header.title }}</h1>
           <div class="h-1 w-20 bg-secondary rounded"></div>
         </div>
         <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">{{ include.data.header.text }}</p>
