--- a/home/styles/index.css
+++ b/home/styles/index.css
@@ -24,3 +24,10 @@
         @apply text-gray-900
     }
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -72px;
+    visibility: hidden;
+}
