--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -1,12 +1,12 @@
-<section class="cm-text-body body-font">
+<section class="cm-gray-2 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
           <a class="anchor" id="{{ include.data.header.ref }}"></a>
-          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 cm-lgt-txt">{{ include.data.header.title }}</h1>
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 cm-gray-1">{{ include.data.header.title }}</h1>
           <div class="h-1 w-20 bg-secondary rounded"></div>
         </div>
-        <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">{{ include.data.header.text }}</p>
+        <p class="lg:w-1/2 w-full leading-relaxed cm-gray-3">{{ include.data.header.text }}</p>
       </div>
 
       <div class="flex flex-wrap -m-4">
@@ -14,7 +14,7 @@
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
             <h3 class="tracking-widest text-primary text-xs font-medium title-font">{{ item.subtitle }}</h3>
-            <h2 class="text-lg cm-lgt-txt font-medium title-font mb-4">{{ item.title }}</h2>
+            <h2 class="text-lg cm-gray-1 font-medium title-font mb-4">{{ item.title }}</h2>
             <p class="leading-relaxed text-base">{{ item.description }}</p>
           </div>
         </div>
