--- a/home/_includes/stats.html
+++ b/home/_includes/stats.html
@@ -1,7 +1,9 @@
 <section class="cm-gray-2 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4 text-center">
-    {% for item in site.data.stats.stats %}
+
+    {% assign stats = stats|default:site.data.general.stats.stats %}
+    {% for item in stats %}
       <div class="p-4 sm:w-1/4 w-1/2">
         <h2 class="title-font font-medium sm:text-4xl text-3xl cm-gray-1">{{ item.number }}</h2>
         <p class="leading-relaxed">{{ item.name }}</p>
