--- a/home/_includes/footer.html
+++ b/home/_includes/footer.html
@@ -29,7 +29,7 @@
 
     <div class="bg-gray-100">
       <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-        <p class="cm-gray-3 text-sm text-center sm:text-left">© 2021 {{ site.title }} — made with love by
+        <p class="cm-gray-3 text-sm text-center sm:text-left">© 2021 {{ site.title }} — made with &hearts; by
           <a href="https://github.com/matmair" rel="noopener noreferrer" class="cm-gray-2 ml-1" target="_blank">@matmair</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
