--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -11,13 +11,15 @@
         <a class="mr-5 hover:cm-gray-1" href="{{ site.doc-link }}">Docs</a>
       </nav>
 
+      {% if page.main_page %}
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center rounded border-2 border-primary">
         <a class="ml-2 mr-2 hover:cm-gray-1" href="#hobby">for <strong>hobby</strong></a>
         <a class="mr-2 hover:cm-gray-1" href="#business">for <strong>business</strong></a>
         <a class="mr-2 hover:cm-gray-1" href="#edu">for <strong>edu</strong></a>
       </nav>
-      <button href="{{site.demo-link}}" class="inline-flex items-center bg-gray-100 ml-2 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+      {% endif %}
+      <a href="{{site.demo-link}}" class="inline-flex items-center bg-gray-100 ml-2 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
         Open demo
-      </button>
+      </a>
     </div>
 </header>
