--- a/home/_includes/features.html
+++ b/home/_includes/features.html
@@ -16,6 +16,7 @@
             <h3 class="tracking-widest text-primary text-xs font-medium title-font">{{ item.subtitle }}</h3>
             <h2 class="text-lg cm-gray-1 font-medium title-font mb-4">{{ item.title }}</h2>
             <p class="leading-relaxed text-base">{{ item.description }}</p>
+            <a class="text-secondary inline-flex items-center" href="{{ item.link }}">Learn More {% include learn_more.html %}</a>
           </div>
         </div>
       {% endfor %}
