--- a/home/_includes/team.html
+++ b/home/_includes/team.html
@@ -1,5 +1,5 @@
 <section class="cm-gray-2 body-font">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="cm-container">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="text-2xl font-medium title-font mb-4 cm-gray-1 tracking-widest">OUR TEAM</h1>
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.</p>
