--- a/home/styles/index.css
+++ b/home/styles/index.css
@@ -32,6 +32,10 @@
         @apply text-gray-500
     }
 
+    .cm-container {
+        @apply container px-5 py-24 mx-auto
+    }
+
     a.anchor {
         display: block;
         position: relative;
