maker should fit better than hobby

--- a/home/_includes/header.html
+++ b/home/_includes/header.html
@@ -13,7 +13,7 @@
 
       {% if page.main_page %}
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center rounded border-2 border-primary">
-        <a class="ml-2 mr-2 hover:cm-gray-1" href="#hobby">for <strong>hobby</strong></a>
+        <a class="ml-2 mr-2 hover:cm-gray-1" href="#maker">for <strong>maker</strong></a>
         <a class="mr-2 hover:cm-gray-1" href="#business">for <strong>business</strong></a>
         <a class="mr-2 hover:cm-gray-1" href="#edu">for <strong>edu</strong></a>
       </nav>
