take back container refactor

--- a/home/_includes/cta.html
+++ b/home/_includes/cta.html
@@ -1,6 +1,6 @@
 <section class="cm-gray-2 body-font">
   {% unless include.no_container %}
-    <div class="cm-container">
+    <div class="container px-5 py-24 mx-auto">
   {% endunless %}
       <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
         <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font cm-gray-1">{{ include.cta.text|default:include.text }}</h1>
