--- a/home/_includes/stats.html
+++ b/home/_includes/stats.html
@@ -1,5 +1,5 @@
 <section class="cm-gray-2 body-font">
-  <div class="cm-container">
+  <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4 text-center">
 
     {% assign stats = stats|default:site.data.general.stats.stats %}
