--- a/home/_includes/functions.html
+++ b/home/_includes/functions.html
@@ -1,5 +1,5 @@
 <section class="cm-gray-2 body-font">
-  <div class="cm-container">
+  <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 cm-gray-1">{{ include.data.title }}</h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">{{ include.data.text }}</p>
