--- a/home/_layouts/branche.html
+++ b/home/_layouts/branche.html
@@ -8,7 +8,7 @@ layout: default
 {% include features.html data=data %}
 
 {% include cta.html cta=site.data.general.learn_cta %}
-{% include functions.html data=site.data.general.function %}
+{% include functions.html data=site.data.general.function extend=true %}
 {% include cta.html cta=site.data.general.end_cta %}
 
 ---
