--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container px-5 py-8 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
         <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
-          <img src="/assets/logo.png" class="h-8">
+          <img src="{{ '/assets/logo.png' | relative_url }}" class="h-8">
           <span class="ml-3 text-xl">{{ site.title }}</span>
         </a>
         <p class="mt-2 text-sm cm-gray-3">{{ site.tagline }}</p>
