--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="{{ "/assets/index.css" | relative_url }}">
-<link rel="shortcut icon" type="image/png" href={{ "/assets/favicon.ico" | relative_url }}>
+<link rel="stylesheet" href="{{ '/assets/index.css' | relative_url }}">
+<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.ico' | relative_url }}">
 
 <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
 <meta itemprop="description" name="description"
