--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="cm-gray-2 body-font sticky top-0 z-50 bg-gradient-to-r from-white to-secondary">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center cm-gray-1 mb-4 md:mb-0" href="/">
-        <img src="/assets/logo.png" class="h-8">
+        <img src="{{ '/assets/logo.png' | relative_url }}" class="h-8">
         <span class="ml-3 text-xl">{{ site.title }}</span>
       </a>
 
