--- a/_includes/functions.html
+++ b/_includes/functions.html
@@ -3,6 +3,9 @@
     <div class="flex flex-col text-center w-full mb-20">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 cm-gray-1">{{ include.data.title }}</h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">{{ include.data.text }}</p>
+      {% if include.data.link %}
+      <a class="text-secondary inline-flex items-center justify-center" href="{% include link.html item=include.data.link %}">Learn More {% include learn_more.html %}</a>
+      {% endif %}
     </div>
     <div class="flex flex-wrap">
       {% assign function_len = include.data.functions | size %}
