--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="cm-gray-2 body-font sticky top-0 z-50 bg-gradient-to-r from-white to-secondary">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-      <a class="flex title-font font-medium items-center cm-gray-1 mb-4 md:mb-0" href="/">
+      <a class="flex title-font font-medium items-center cm-gray-1 mb-4 md:mb-0" href="{{ '/' | relative_url }}">
         <img src="{{ '/assets/logo.png' | relative_url }}" class="h-8">
         <span class="ml-3 text-xl">{{ site.title }}</span>
       </a>
 
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:cm-gray-1" href="/">Home</a>
+        <a class="mr-5 hover:cm-gray-1" href="{{ '/' | relative_url }}">Home</a>
         <a class="mr-5 hover:cm-gray-1" href="{{ site.plugin-link }}">Plugins</a>
         <a class="mr-5 hover:cm-gray-1" href="{{ site.doc-link }}">Docs</a>
       </nav>
