--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -5,7 +5,7 @@
       <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
         <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font cm-gray-1">{{ include.cta.text|default:include.text }}</h1>
         {% for item in include.cta.btn %}
-        <a href="{% include link.html item=item.link %}" class="flex-shrink-0 text-white bg-secondary border-0 py-2 px-8 focus:outline-none hover:bg-primary rounded text-lg mt-10 sm:mt-0">{{ item.text }}</a>
+        <a href="{% include link.html item=item.link %}" class="text-white bg-secondary focus:outline-none hover:bg-primary text-lg rounded flex-shrink-0 border-0 py-2 px-4 mt-10 sm:mt-0 ml-4">{{ item.text }}</a>
         {% endfor %}
         {% if include.link %}
         <a href="{% include link.html item=include.link %}" class="flex-shrink-0 text-white bg-secondary border-0 py-2 px-8 focus:outline-none hover:bg-primary rounded text-lg mt-10 sm:mt-0">{{ include.link_text }}</a>
