--- a/site/assets/index.css
+++ b/site/assets/index.css
@@ -1,9 +1,8 @@
 ---
 ---
-
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 @layer components {
