--- a/_includes/functions.html
+++ b/_includes/functions.html
@@ -6,6 +6,7 @@
 
 <section class="cm-gray-2 body-font">
   <div class="container px-5 {% if padding == true %}py-24{% endif %} mx-auto">
+    {% if include.data.title or include.data.text or include.data.link %}
     <div class="flex flex-col text-center w-full mb-20">
       {% if include.data.title %}<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 cm-gray-1">{{ include.data.title }}</h1>{% endif %}
       {% if include.data.text %}<p class="lg:w-2/3 mx-auto leading-relaxed text-base">{{ include.data.text }}</p>{% endif %}
@@ -13,6 +14,7 @@
       <a class="text-secondary inline-flex items-center justify-center" href="{% include link.html item=include.data.link %}" alt="learn more">Learn More {% include learn_more.html %}</a>
       {% endif %}
     </div>
+    {% endif %}
     <div class="flex flex-wrap">
       {% assign function_len = include.data.functions | size %}
       {% for item in include.data.functions %}
