--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -25,7 +25,7 @@ layout: default
 <h3>Posts</h3>
 <ul class="list-unstyled">
   {% for post in filtered_posts %}
-    <li>{{ post.date | date_to_string }} <a href="{{ post.url }}" class="lead">{{ post.title }}</a></li>
+    <li>{{ post.date | date_to_string }} <a href="{{ post.url | relative_url }}" class="lead">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
 {% endif %}
