--- a/assets/index.css
+++ b/assets/index.css
@@ -1,4 +1,5 @@
 ---
+layout: empty
 ---
 
 @import "tailwindcss/base";
@@ -41,5 +42,4 @@
         top: -72px;
         visibility: hidden;
     }
-    
 }
