--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </a>
 
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:cm-gray-1" href="{{ '/' | relative_url }}">Home</a>
+        <a class="mr-5 hover:cm-gray-1" href="{{ '/blog' | relative_url }}">Blog</a>
         <a class="mr-5 hover:cm-gray-1" href="{{ site.plugin-link }}">Plugins</a>
         <a class="mr-5 hover:cm-gray-1" href="{{ site.doc-link }}">Docs</a>
       </nav>
