--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,15 @@
 <html lang="{{ site.lang | default: "en-US" }}">
 
 <head>
-    {% include head.html %}
+    {% include base/head.html %}
 </head>
 
 <body class="antialiased cm-gray-1 min-h-screen">
-    {% include header.html %}
+    {% include base/header.html %}
 
     {{ content }}
 
-    {% include footer.html %}
+    {% include base/footer.html %}
 </body>
 
 </html>
