--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.name }}</h1>
-{% include publisher_ref.html pub=page.publisher %}
+{% include partial/publisher_ref.html pub=page.publisher %}
 
 <div class="row g-5">
     <div class="col-md-8">
