--- a/_includes/block/features.html
+++ b/_includes/block/features.html
@@ -1,5 +1,5 @@
 <section class="cm-gray-2 body-font">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="section-container">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
           <a class="anchor" id="{{ include.data.ref }}"></a>
