--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,5 +1,5 @@
 <section class="cm-gray-2 body-font">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="section-container">
       <h1 class="text-3xl font-medium title-font cm-gray-1 mb-12 text-center">Testimonials</h1>
       <div class="flex flex-wrap -m-4">
         <div class="p-4 md:w-1/2 w-full">
